--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,9 +1,11 @@
 ---
+import '../styles/global.sass';
+
 export interface Props {
 	title?: string;
 }
 
-const { title } = Astro.props;
+const { title = 'Default title' } = Astro.props as Props;
 ---
 
 <!DOCTYPE html>
