feat: add showcases and features

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,11 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import Showcase from '../components/Showcase.astro'
+import Features from '../components/Features.astro'
 ---
 
 <Layout>
+	<Showcase heading="Awesome heading" text="An incredible text"/>
+	<Features />
 	<h1>Welcome...</h1>
 </Layout>
