--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,16 +1,14 @@
 ---
 export interface Props {
-  title?: string;
-  body?: string;
+ 
   dark?: boolean;
 }
 
-const { title = "", body = "", dark = false } = Astro.props as Props;
+const { dark = false } = Astro.props as Props;
 ---
 
 <div class={`card && ${dark && 'dark'}`}>
-  <h3>{title}</h3>
-  <h3>{body}</h3>
+  <slot />
 </div>
 
 <style>
