--- a/src/components/Showcase.astro
+++ b/src/components/Showcase.astro
@@ -6,7 +6,7 @@ export interface Props {
   text?: string;
   showExtra?: boolean;
 }
-const { heading = "Welcome To The Astro Crash Course!", text="Build super fast HTML-first websites using your favorite JavaScript frameworks", showExtra = false } = Astro.props as Props;
+const { heading = "Welcome to ASTRO!", text="Build super fast HTML-first websites using your favorite JavaScript frameworks", showExtra = false } = Astro.props as Props;
 ---
 
 <section class="showcase">
@@ -23,7 +23,7 @@ const { heading = "Welcome To The Astro Crash Course!", text="Build super fast H
     <img class="logos-small" src={logosSmall} alt="" />
   </div>
   <p class="showcase-demo">
-    <small>This is a demo website used for the YouTube crash course</small>
+    <small>This is a demo website used only for study reason</small>
   </p>
   </>}
 </section>
