fix: update title

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,7 +5,7 @@ import '../styles/global.css';
 export interface Props {
   title?: string;
 }
-const { title = 'Astro Crash Course' } = Astro.props as Props;
+const { title = 'Astro Demo' } = Astro.props as Props;
 ---
 
 <!DOCTYPE html>
